# ohno-old

./: .gitignore  Cargo.toml  README.md  license  package-lock.json  package.json
src/: alias.js  createStream.js  createStreamWatson.js  index.js  listener.rs  main.rs  queue.rs
src/commands/: alias.json  connect.js  dict.js  disconnect.js  general.rs  mod.rs  voice.rs
src/handlers/: messageCreate.js  ready.js  voiceStateUpdate.js
src/voice/: mod.rs
