[package]
name = "ohno"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
songbird = { git = "https://github.com/serenity-rs/songbird", branch = "next" }
tokio = { version = "1.17.0", features = [ "full" ] }
poise = { git = "https://github.com/kangalioo/poise" }
serenity = "0.10.10"
async-trait = "0.1.52"
futures = "0"
reqwest = "0"
bytes = "1"
serde_json = "1"
regex = "1.5.5"
